# SymulacjeF1

./: .gitignore  Dokumentacja.md  INSTRUKCJA_UZYTKOWNIKA.md  PREZENTACJA.md
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/core/: gui.rs  track.rs
helpers/src/: general.rs
input/parameters/: more_drivers.json  more_drivers_dry.json  real_monza.json  sim_constants.json  test_race.json  test_race_3.json  tires.json
input/parameters/tracks/: Monza.json
output/: last_run.txt  last_run_averaged.txt
racesim/: Cargo.toml
racesim/src/core/: car.rs  driver.rs  handle_race.rs  race.rs  state_handler.rs  tireset.rs  track.rs
racesim/src/interfaces/: gui_interface.rs
racesim/src/post/: race_result.rs
racesim/src/pre/: mod.rs  read_sim_pars.rs  sim_opts.rs
