[package]
name = "racesim"
version = "0.1.0"
authors = ["Alexander Heilmeier <alexander.heilmeier@tum.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A time-discrete race simulator"
repository = "https://github.com/heilmeiera"
include = ["src/**/*.rs", "../input/**/*", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../helpers" }
rand = "0.8"
rand_distr = "0.4"
serde_json = "1.0"
anyhow = "1.0"
css-color-parser = "0.1.2"
# --- POPRAWKA JEST TUTAJ ---
clap = { version = "3.0.0-beta.4", features = ["derive"] }
# ---------------------------
serde = { version = "1.0", features = ["derive"] }
flume = "0.10.9"
approx = "0.5.0"